# node_simulator

./: .gitignore  Cargo.toml  README.md  tarpaulin.toml  tarpaulin_no_wgpu.toml
.github/workflows/: CI.yml  build.yml  coverage.yml  test.yml
docs/: Release Targets.md
docs/scripts/solar_system/: add_planets.txt  remove_planets.txt
example_scripts/solar_system/: add_planets.txt  reset_planets.txt
res/: cuboid.mtl
src/: commands.rs  display.rs  graphics.rs  lib.rs  main.rs  node.rs  node_collection.rs  resources.rs  shader.wgsl  simulation.rs
src/graphics/: camera.rs  instance.rs  instances.rs  model.rs  models.rs  node_events.rs  scene_event.rs  scene_implementations.rs  state.rs  texture.rs  vertex.rs  window.rs
src/graphics/instances/: instance.rs  instance_collection.rs
src/graphics/models/: material.rs  mesh.rs  model.rs  model_collection.rs  model_collection_tests.rs  model_tests.rs
src/graphics/scene_implementations/: shim_state.rs  state.rs
src/node/: event.rs  force.rs  id.rs  node_display.rs  position.rs
src/node/event/: add_node.rs  get.rs  remove_node.rs  set_node.rs  set_target_tps.rs  step.rs
tests/: commands.rs
tests/common/: mod.rs
utilities/src/common/: texture_bind_group_layout.rs
utils/: Cargo.toml
utils/src/: common.rs
utils/src/common/: instance_data.rs
