[package]
name = "node_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12", features = [ "derive" ] }
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"

