[package]
name = "node_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wgpu"]
wgpu = []

[dependencies]
bytemuck = { version = "1.12", features = [ "derive" ] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
pollster = "0.3"
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2.1", features = [
    "async",
]}
clap = { version = "4.4", features = [ "derive" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.sdl2]
version = "0.36"
features = ["raw-window-handle", "bundled"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dev-dependencies]
utils = {path = "utils" }


